# fmp3

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  fs.rs  main.rs  tags.rs
