[package]
name = "fmp3"
version = "0.2.0"
authors = ["Jacob Eldergill Beck <jacob@ebeck.io>"]

[dependencies]
clap = "^2.25.0"
error-chain = "^0.10.0"
id3 = "^0.1.0"
metaflac = "^0.1.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
toml = "^0.4.0"
scoped-pool = "^1.0"
num_cpus = "^1.6.0"
log = "0.3"
env_logger = "0.3"
duct = "^0.9.0"